test/arrays/bradc/errors/badArrArgErrMsg.good
badArrArgErrMsg.chpl:6: error: unresolved call 'foo([domain(1,int,false)] complex)'
badArrArgErrMsg.chpl:8: note: candidates are: foo(X: [?Dlocal] real)
